# gq

./: CMakeLists.txt  Doxyfile.in  README.md
include/: gq.cfg.hpp  gq.def.hpp
include/gq/: gq.fwd.hpp
test/unit/: main.unit.cpp
